--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-sphinx-book-theme==1.0.1
-myst-parser==2.0.0
-sphinx-favicon==1.0.1
-sphinx-tabs==3.4.4
-sphinx_design==0.5.0
+sphinx~=8.0.0
+
+sphinx-book-theme==1.1.3
+# pydata-sphinx-theme~=0.15.4
+myst-parser>=4.0.0
+sphinx-favicon>=1.0.1
+sphinx-tabs>=3.4.4
+sphinx_design>=0.5.0
