--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -4,7 +4,7 @@ name: Deploy static content to Pages
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["main", 'auto-deploy']
+    branches: ["main", '17-introduce-slides-ready-layout']
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
