--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -36,9 +36,12 @@ jobs:
           python-version: '3.11'
           cache: 'pip' # caching pip dependencies
       - run: pip install -r requirements.txt
-      - name: Prepare sphinx build
+      - name: Spinx build pages
         run: |
-            make html
+            sphinx-build -b html source docs/html -E -A build="pages"
+      - name: Spinx build slides
+        run: |
+            sphinx-build -b html source docs/html/slides -E -A build="slides"
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
